workloads/traefik-int/traefik-int-app.yml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik-int
  namespace: traefik
  labels:
    k8s-app: traefik-int
spec:
  selector:
    matchLabels:
      name: traefik-int
  template:
    metadata:
      labels:
        name: traefik-int
        app: traefik-int
        k8s-app: traefik-int
    spec:
      volumes:
        - name: traefik-int-volume
          persistentVolumeClaim:
            claimName: traefik-int-claim
      serviceAccountName: traefik-int-sa
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:v2.4
          # imagePullPolicy: Always
          name: traefik
          volumeMounts:
            - mountPath: /etc/traefik
              name: traefik-int-volume
          ports:
            - name: traefik
              containerPort: 8080
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - --global.sendAnonymousUsage=true
            - --log=true
            - --log.level=INFO
            - --accesslog=true
            - --api.dashboard=true
            - --api.insecure=true
            - --entrypoints.http.address=:80
            - --entrypoints.https.address=:443
            - --providers.kubernetesCRD.ingressclass=traefik-internal
            - --certificatesresolvers.default.acme.email=hostmaster@rask.dk
            - --certificatesresolvers.default.acme.storage=/etc/traefik/acme.json
            - --certificatesresolvers.default.acme.tlschallenge=true
          # - --certificatesresolvers.default.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory # Debugging only
          # - --serverstransport.insecureskipverify

---
kind: Service
apiVersion: v1
metadata:
  name: traefik-int
  namespace: traefik
spec:
  type: LoadBalancer
  selector:
    k8s-app: traefik-int
  loadBalancerIP: 192.168.0.11
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
    - name: traefik
      protocol: TCP
      port: 8080
