workloads/traefik-int/traefik-int-ing.yml
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: http-to-https-redirect
#   namespace: traefik
# spec:
#   entrypoints:
#   - http
#   routes:
#   - match: Host(`hal.rask.dk`)
#     kind: Rule
#     services:
#     - name: traefik
#       port: 80
#     middlewares:
#     - name: redirect-https

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-int-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entrypoints:
    - https
  routes:
    - match: Host(`hal.rask.dk`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: traefik-int
          port: 8080
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-int-ping
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entrypoints:
    - traefik
  routes:
    - match: PathPrefix(`/ping`)
      kind: Rule
      services:
        - name: traefik-int
          port: 8080
